# api/v1/indodax/order/handler.go
@@ -7,16 +7,19 @@ import (
 	"github.com/FAT/common/wrapper"
 	"github.com/FAT/models"
 	"github.com/FAT/repository"
+	"github.com/FAT/usecase/exchange"
 	"github.com/gin-gonic/gin"
 )
 
 type OrderHandler struct {
-	config *models.Config
+	config  *models.Config
+	indodax exchange.Indodax
 }
 
 func NewOrderHandler(config *models.Config) *OrderHandler {
 	return &OrderHandler{
-		config: config,
+		config:  config,
+		indodax: exchange.NewIndodaxOrder(config),
 	}
 }
 
@@ -26,23 +29,30 @@ func NewOrderHandler(config *models.Config) *OrderHandler {
 // @Accept       json
 // @Produce      json
 // @Param        Authorization  header    string            true  "Authentication header"
-// @Param        message        body      repository.Order  true  "Order payload"
-// @Success      200            {object}  wrapper.MessageSuccess
-// @Failure      400            {object}  wrapper.MessageError
-// @Failure      422            {object}  wrapper.MessageError
-// @Failure      404            {object}  wrapper.MessageError
-// @Failure      401            {object}  wrapper.MessageError
+// @Param        message        body      models.OrderPayload  true  "Order payload"
+// @Success      200            {object}  wrapper.Response
+// @Failure      400            {object}  wrapper.Response
+// @Failure      422            {object}  wrapper.Response
+// @Failure      404            {object}  wrapper.Response
+// @Failure      401            {object}  wrapper.Response
 // @Router       /indodax/order [post]
 func (oh *OrderHandler) CreateOrder(ctx *gin.Context) {
-	var req repository.CreateOrderParams
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusUnprocessableEntity, wrapper.ErrorHandler(err))
+	var payload models.OrderPayload
+	if err := ctx.ShouldBindJSON(&payload); err != nil {
+		ctx.JSON(http.StatusUnprocessableEntity, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
-	order, err := oh.config.Storage.CreateOrder(ctx, req)
+	order, err := oh.indodax.Order(ctx, repository.CreateOrderParams{
+		OrderType:   payload.OrderType,
+		OrderPrice:  payload.OrderPrice,
+		OrderCrypto: payload.OrderCrypto,
+		CreatedAt:   oh.config.Time.Now(nil),
+		UpdatedAt:   oh.config.Time.Now(nil),
+	})
+
 	if err != nil {
-		ctx.JSON(http.StatusUnprocessableEntity, wrapper.ErrorHandler(err))
+		ctx.JSON(http.StatusBadRequest, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
@@ -50,7 +60,7 @@ func (oh *OrderHandler) CreateOrder(ctx *gin.Context) {
 }
 
 type getOrderRequest struct {
-		OrderID int64 `uri:"id" binding:"required"`
+	OrderID int64 `uri:"id" binding:"required"`
 }
 
 // GetOrder godoc
@@ -61,21 +71,21 @@ type getOrderRequest struct {
 // @Param        Authorization  header    string  true  "Authentication header"
 // @Param        id             path      int     true  "Order ID"
 // @Success      200            {object}  repository.Order
-// @Failure      400            {object}  wrapper.MessageError
-// @Failure      404            {object}  wrapper.MessageError
-// @Failure      401            {object}  wrapper.MessageError
+// @Failure      400            {object}  wrapper.Response
+// @Failure      404            {object}  wrapper.Response
+// @Failure      401            {object}  wrapper.Response
 // @Router       /indodax/order/:id [get]
 func (oh *OrderHandler) GetOrder(ctx *gin.Context) {
 	var req getOrderRequest
 	if err := ctx.ShouldBindUri(&req); err != nil {
-		ctx.JSON(http.StatusUnprocessableEntity, wrapper.ErrorHandler(err))
+		ctx.JSON(http.StatusUnprocessableEntity, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
 	order, err := oh.config.Storage.GetOrder(ctx, req.OrderID)
 	if err != nil {
 		fmt.Println(err)
-		ctx.JSON(http.StatusNotFound, wrapper.ErrorHandler(err))
+		ctx.JSON(http.StatusNotFound, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
@@ -96,15 +106,15 @@ type listOrderRequest struct {
 // @Param        page    query  int32  false "page offset"
 // @Param        limit   query   int32  false "data size"
 // @Success      200  {array}  repository.Order
-// @Failure      400  {object}  wrapper.MessageError
-// @Failure      404  {object}  wrapper.MessageError
-// @Failure      401  {object}  wrapper.MessageError
-// @Failure      500  {object}  wrapper.MessageError
+// @Failure      400  {object}  wrapper.Response
+// @Failure      404  {object}  wrapper.Response
+// @Failure      401  {object}  wrapper.Response
+// @Failure      500  {object}  wrapper.Response
 // @Router       /indodax/order/data [get]
 func (oh *OrderHandler) ListOrder(ctx *gin.Context) {
 	var req listOrderRequest
 	if err := ctx.ShouldBindQuery(&req); err != nil {
-		ctx.JSON(http.StatusUnprocessableEntity, wrapper.ErrorHandler(err))
+		ctx.JSON(http.StatusUnprocessableEntity, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
@@ -115,7 +125,7 @@ func (oh *OrderHandler) ListOrder(ctx *gin.Context) {
 
 	orders, err := oh.config.Storage.ListOrder(ctx, arg)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, wrapper.ErrorHandler(err))
+		ctx.JSON(http.StatusBadRequest, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
@@ -127,24 +137,24 @@ func (oh *OrderHandler) ListOrder(ctx *gin.Context) {
 // @Description  Delete order Data by ID
 // @Param        Authorization  header  string  true  "Authentication header"
 // @Param        id  path  int  true  "Order ID"
-// @Success      200  {object}  wrapper.MessageSuccess
-// @Failure      400  {object}  wrapper.MessageError
-// @Failure      404  {object}  wrapper.MessageError
-// @Failure      500  {object}  wrapper.MessageError
-// @Failure      401  {object}  wrapper.MessageError
+// @Success      200  {object}  wrapper.Response
+// @Failure      400  {object}  wrapper.Response
+// @Failure      404  {object}  wrapper.Response
+// @Failure      500  {object}  wrapper.Response
+// @Failure      401  {object}  wrapper.Response
 // @Router       /indodax/order/:id [delete]
 func (oh *OrderHandler) DeleteOrder(ctx *gin.Context) {
 	var req repository.CreateOrderParams
 	if err := ctx.ShouldBindUri(req); err != nil {
-		ctx.JSON(http.StatusUnprocessableEntity, wrapper.ErrorHandler(err))
+		ctx.JSON(http.StatusUnprocessableEntity, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
 	err := oh.config.Storage.DeleteOrder(ctx, req.OrderID)
 	if err != nil {
-		ctx.JSON(http.StatusUnprocessableEntity, wrapper.ErrorHandler(err))
+		ctx.JSON(http.StatusUnprocessableEntity, wrapper.Error(err, oh.config.Env.EnvApp))
 		return
 	}
 
-	ctx.JSON(http.StatusOK, wrapper.SuccessHandler("success"))
+	ctx.JSON(http.StatusOK, wrapper.Success("success"))
 }
